# mapless-navigation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  pytest.ini  requirements.txt  run.ipynb  train.ipynb
include/: octree_diff.h
launch/: build_lidar_octomap.launch  octomap.launch.py  octomap_launch.py  octomap_mapping.launch  reliability_override.yaml
learning/: model.py
msg/: MimoMsg.msg  RadarCubeMsg.msg
scripts/: convert_bags_to_ros2.sh  convert_heatmaps.py
src/: coloradar_tools.py  dataset.py  model_manager.py  octomap_node.cpp  octomap_postprocess.cpp  octomap_preprocess.cpp  octree_diff.cpp  odom2tf_node.cpp  save_predicted_clouds.py  show_grids.py  show_points.py  show_predicted_map.py  show_true_map.py  sweep.py  sweep_xs.py  train_grid.py  train_grids.py  train_points.py  train_points_generative.py  train_points_regression.py  visualize_points.py
src/base_src/: CMakeLists.txt  coloradar_tools.py  octomap_postprocess.cpp  octomap_preprocess.cpp
src/base_src/data_prep/: build_octomap.cpp  coloradar_tools.cpp  compare_heatmaps.cu  create_cascade_pointclouds.cpp  filter_cloud.cpp  interpolate_poses_for_cascade.cpp  interpolate_poses_for_lidar.cpp  make_dataset.cpp  octree_diff.cpp  sample_map_frames.cpp
src/base_src/include/: DataTypes.h  ThreadSafeDeque.h  coloradar_cuda.h  coloradar_run.hpp  coloradar_tools.h  cuda_kernels.h  dca_types.h  defines.h  octo_pointcloud.hpp  octree_diff.h  pcl_functions.hpp  types.h  utils.h  utils.hpp
src/base_src/learning/: base_classes.py  convert_heatmaps.py  dataset.py  dataset_intensity.py  loss_grid.py  loss_points.py  loss_polar.py  loss_spatial_prob.py  metrics.py  model.py  model_intensity_3d.py  model_intensity_3d_polar.py  model_manager.py  model_polar.py  model_unet.py  radar_config.py  run.py  train.py  train_grid.py  train_points.py  train_polar.py  utils.py  visualize_grids.py  visualize_heatmap_clouds.py
src/base_src/libs/: coloradar_dataset.cpp  coloradar_run.cpp  configs.cpp  cuda_kernels.cu  octo_pointcloud.cpp  pcl_functions.cpp  radar_processing.cu  radar_processing_old.cu  utils.cpp
src/base_src/scripts/: scan_dataset.py
src/base_src/test/: test_coloradar_tools.cpp  test_octree_diff.cpp
src/data/: __init__.py  data_transforms.py  dataset.py  radar_config.py
src/learning/: convert_heatmaps.py  dataset.py  dataset_intensity.py  dataset_intensity_3d.py  evaluate.py  loss_focal.py  loss_polar.py  model_intensity.py  model_intensity_3d.py  model_intensity_3d_polar.py  run.py  train.py  utils.py
src/metrics/: __init__.py  base.py  data_buffer.py  diff_utils.py  loss_grid.py  loss_points.py  metrics.py  test_data_buffer.py  test_loss_points.py
src/models/: __init__.py  base.py
src/models/grid_based/: __init__.py  input_reshape.py  occupancy_grids.py  polar_to_cartesian.py  unet.py
src/models/point_based/: __init__.py  decoders.py  downsampling.py  encoders copy.py  encoders.py  generative.py  occupancy_pointclouds.py  pointnet.py  polar_to_cartesian.py
src/scripts/: convert_bags_to_ros2.sh  create_sub_dataset.py  fix_custom_message_types.py  scan_dataset.py
src/tests/: test_data_buffer.py  test_diff_utils.py  test_loss_points.py  test_loss_points2.py  test_loss_points_distance.py
src/training/: __init__.py  model_manager.py
src/utils/: __init__.py  data_transforms.py  dataset.py  evaluation.py  logger.py  param_validation.py  params.py  radar_config.py
src/visualize/: points.py  visualize_grids.py  visualize_heatmap_clouds.py
test/: test_octree_diff.cpp
